# duke-pilot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
duke_pilot/: main.py
duke_pilot/api/: chat.py  docstore.py  parser.py
duke_pilot/api/models/: chat.py  docstore.py  parser.py
duke_pilot/docstore/: chunk_store.py  docstore.py  memory_store.py
duke_pilot/processors/: chunker.py  embedder.py  parser.py
duke_pilot/processors/doc_parser/: doc_parser.py  image_parser.py  pdf_parser.py  text_parser.py
duke_pilot/prompter/: model.py  prompter.py
duke_pilot/utils/: log_utils.py  model_utils.py  path_helper.py
scripts/: setup.py
tests/: test_utils.py
