[project]
name = "duke-pilot"
version = "0.1.0"
description = "A remake of GitHub CoPilot and related technologies."
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "fastapi[standard]>=0.116.1",
    "logfire>=3.24.0",
    "nltk>=3.9.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.2",
    "qdrant-client>=1.14.3",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.2",
]
